--- a/saved/newsfeed.html
+++ b/saved/newsfeed.html
@@ -292,6 +292,9 @@
         <div class="mini-vp"> 
             <ul class="decorated-list">
             
+            <li><time>10/8/2025</time><br>
+            <a target="_blank" href="https://another-piece-of-candy.thecomicseries.com/comics/409/">webcomic update</a>
+            </li>
             <li><time>10/1/2025</time><br>
             <a href="https://store.steampowered.com/app/3946750/Syrup_2_Candy_Alchemy_RPG/" target="_blank">Syrup 2: Candy Alchemy RPG Demo</a> is live on steam!</li>
             <li><time>9/30/2025</time><br>
@@ -456,6 +459,9 @@
             <div class="mini-vp">
             <ul class="decorated-list">
                 
+                <li><time>10/12/2025</time><br>
+                small css update for my posts page... might update my template for that later too
+                </li>
                 <li><time>9/7/2025</time><br>
                 2 new pages! <a href="/games/syrup-2/">syrup 2 updates</a> and the <a href="/comics/return-to-ash.html">return to ash release countdown comic</a> (archived from <a href="/posts/">posts</a>). <a href="/sitemap.html">sitemap</a> has been updated so the categories are easier to browse through.
                 </li>
