now compare posts with text only; time zone fix

--- a/saved/neocities.html
+++ b/saved/neocities.html
@@ -127,9 +127,9 @@
       <h2 class="eps title-with-badge"><span>NomnomNami - Official Site</span> <a href="/supporter" class="supporter-badge" title="Neocities Supporter"></a> </h2>
       <p class="site-url"><a href="https://nomnomnami.com">nomnomnami.com</a></p>
       <div class="stats">
-        <div class="stat"><strong>2,178,021</strong> <span>views</span></div>
-        <div class="stat"><strong>530</strong> <span>followers</span></div>
-        <div class="stat"><strong>2,919</strong> <span>updates</span></div>
+        <div class="stat"><strong>2,187,688</strong> <span>views</span></div>
+        <div class="stat"><strong>531</strong> <span>followers</span></div>
+        <div class="stat"><strong>2,924</strong> <span>updates</span></div>
         <div class="stat tips"><strong>0</strong> <span>tips</span></div>
       </div>
       <div class="actions">
@@ -174,6 +174,7 @@
       </div>
 
       <div class="content">
+          <a href="/site/corelessjester" class="user" title="WIP"><i class="fa fa-user"></i>corelessjester</a>, 
           <a href="/site/thezipperzone" class="user" title="The Zipper Zone"><i class="fa fa-user"></i>thezipperzone</a>, 
           <a href="/site/hollowmend" class="user" title="The web site of hollowmend"><i class="fa fa-user"></i>hollowmend</a>, 
           <a href="/site/sorceress-nicole" class="user" title="The web site of sorceress-nicole"><i class="fa fa-user"></i>sorceress-nicole</a>, 
@@ -218,9 +219,7 @@
           <a href="/site/thegardencollective" class="user" title="Garden Homepage"><i class="fa fa-user"><i class="fa fa-heart"></i></i>thegardencollective</a>, 
           <a href="/site/furple" class="user" title="fufle"><i class="fa fa-user"><i class="fa fa-heart"></i></i>furple</a>, 
           <a href="/site/kanekos" class="user" title="Kaneko&#39;s Space"><i class="fa fa-user"></i>kanekos</a>, 
-          <a href="/site/frostytian" class="user" title="Frosty&#39;s Nonsense Corner"><i class="fa fa-user"></i>frostytian</a>, 
-          <a href="/site/pierrotandthemoon" class="user" title="Pierrot and the Moon."><i class="fa fa-user"></i>pierrotandthemoon</a>, 
-          <a href="/site/lcrcomics" class="user" title="HOME"><i class="fa fa-user"></i>lcrcomics</a>
+          <a href="/site/frostytian" class="user" title="Frosty&#39;s Nonsense Corner"><i class="fa fa-user"></i>frostytian</a>
       </div>
     </div>
 
@@ -232,12 +231,22 @@
             <a href="/site/nomnomnami" class="user" title="NomnomNami - Official Site"><i class="fa fa-user"><i class="fa fa-heart"></i></i>nomnomnami</a> updated <a href="https://nomnomnami.com" class="user" title="NomnomNami - Official Site">NomnomNami - Official Site</a>
         </div>
         <span class="date">
-            <a href="/site/nomnomnami?event_id=5773921" class="local-date-title" data-timestamp="1760305472">6 hours ago</a>
+            <a href="/site/nomnomnami?event_id=5773921" class="local-date-title" data-timestamp="1760305472">20 hours ago</a>
         </span>
       </div>
 
         <div class="content">
           <div class="files">
+              <div class="file">
+                <div class="html-thumbnail html">
+                  <a href="https://nomnomnami.com/games/syrup-2/index.html">
+                      <img src="/site_screenshots/35/19/nomnomnami/games/syrup-2/index.html.540x405.webp" alt="Website screenshot">
+                      <span class="title" title="games/syrup-2/index.html">
+                          games/syrup-2/index.html
+                      </span>
+                  </a>
+                </div>
+              </div>
               <div class="file">
                 <div class="html-thumbnail html">
                   <a href="https://nomnomnami.com">
@@ -262,7 +271,7 @@
         </div>
 
     <div id="event_5773921_actions" class="actions">
-      5&nbsp;likes
+      9&nbsp;likes
 </div>
 
 
@@ -277,7 +286,7 @@
             <a href="/site/nomnomnami" class="user" title="NomnomNami - Official Site"><i class="fa fa-user"><i class="fa fa-heart"></i></i>nomnomnami</a> updated <a href="https://nomnomnami.com" class="user" title="NomnomNami - Official Site">NomnomNami - Official Site</a>
         </div>
         <span class="date">
-            <a href="/site/nomnomnami?event_id=5766477" class="local-date-title" data-timestamp="1760157339">1 day ago</a>
+            <a href="/site/nomnomnami?event_id=5766477" class="local-date-title" data-timestamp="1760157339">2 days ago</a>
         </span>
       </div>
 
@@ -681,7 +690,7 @@
     <div class="stats">
       <div class="stat">
           <span>Last updated</span>
-          <strong class="local-date-title" data-timestamp="1760318454">2 hours ago</strong>
+          <strong class="local-date-title" data-timestamp="1760376591">24 minutes ago</strong>
       </div>
       <div class="stat"><span>Created</span><strong>Mar 13, 2024</strong></div>
       <a href="/site/nomnomnami/stats">Site Traffic Stats</a>
@@ -806,7 +815,7 @@
         <a href="/site/usprisoner" title="HOME!"><img src="/site_screenshots/42/17/usprisoner/index.html.50x50.webp" alt="HOME! avatar" class="avatar"></a>
         <a href="/site/sorbier" title="sorbier"><img src="/site_screenshots/12/57/sorbier/index.html.50x50.webp" alt="sorbier avatar" class="avatar"></a>
         <a href="/site/debtdeath" title="and let forever be delayed / debtdeath"><img src="/site_screenshots/35/30/debtdeath/index.html.50x50.webp" alt="and let forever be delayed / debtdeath avatar" class="avatar"></a>
-        <a href="/site/rabbitnet" title="RabbitNET"><img src="/site_screenshots/14/43/rabbitnet/index.html.50x50.webp" alt="RabbitNET avatar" class="avatar"></a>
+        <a href="/site/rabbitnet" title="HOME // RabbitNET"><img src="/site_screenshots/14/43/rabbitnet/index.html.50x50.webp" alt="HOME // RabbitNET avatar" class="avatar"></a>
         <a href="/site/tinywanderer" title="tiny wanderer"><img src="/site_screenshots/34/26/tinywanderer/index.html.50x50.webp" alt="tiny wanderer avatar" class="avatar"></a>
         <a href="/site/leirin" title="Leirin&#39;s Fluorescent Zone"><img src="/site_screenshots/24/20/leirin/index.html.50x50.webp" alt="Leirin&#39;s Fluorescent Zone avatar" class="avatar"></a>
         <a href="/site/lied" title="LI3D"><img src="/site_screenshots/11/72/lied/index.html.50x50.webp" alt="LI3D avatar" class="avatar"></a>
@@ -885,10 +894,10 @@
 
   <div class="follower-list">
     <h3><a href="/site/nomnomnami/followers">Followers</a></h3>
-        <a href="/site/suboptimalism" title="suboptimalism.neocities.org"><img src="/site_screenshots/12/70/suboptimalism/index.html.50x50.webp" alt="suboptimalism.neocities.org avatar" class="avatar" onerror="this.src='/img/50x50.png'"></a>
         <a href="/site/bisha" title="bisha.neocities.org"><img src="/site_screenshots/27/32/bisha/index.html.50x50.webp" alt="bisha.neocities.org avatar" class="avatar" onerror="this.src='/img/50x50.png'"></a>
         <a href="/site/lilithdev" title="lilithdev.neocities.org"><img src="/site_screenshots/39/74/lilithdev/index.html.50x50.webp" alt="lilithdev.neocities.org avatar" class="avatar" onerror="this.src='/img/50x50.png'"></a>
         <a href="/site/slushienova" title="slushienova.neocities.org"><img src="/site_screenshots/11/18/slushienova/index.html.50x50.webp" alt="slushienova.neocities.org avatar" class="avatar" onerror="this.src='/img/50x50.png'"></a>
+        <a href="/site/suboptimalism" title="suboptimalism.neocities.org"><img src="/site_screenshots/12/70/suboptimalism/index.html.50x50.webp" alt="suboptimalism.neocities.org avatar" class="avatar" onerror="this.src='/img/50x50.png'"></a>
         <a href="/site/lazer-bunny" title="lazer-bunny.neocities.org"><img src="/site_screenshots/50/03/lazer-bunny/index.html.50x50.webp" alt="lazer-bunny.neocities.org avatar" class="avatar" onerror="this.src='/img/50x50.png'"></a>
         <a href="/site/linwood" title="linwood.neocities.org"><img src="/site_screenshots/33/11/linwood/index.html.50x50.webp" alt="linwood.neocities.org avatar" class="avatar" onerror="this.src='/img/50x50.png'"></a>
         <a href="/site/bruisedgh0st" title="bruisedgh0st.neocities.org"><img src="/site_screenshots/87/18/bruisedgh0st/index.html.50x50.webp" alt="bruisedgh0st.neocities.org avatar" class="avatar" onerror="this.src='/img/50x50.png'"></a>
