--- a/saved/neocities.html
+++ b/saved/neocities.html
@@ -127,9 +127,9 @@
       <h2 class="eps title-with-badge"><span>NomnomNami - Official Site</span> <a href="/supporter" class="supporter-badge" title="Neocities Supporter"></a> </h2>
       <p class="site-url"><a href="https://nomnomnami.com">nomnomnami.com</a></p>
       <div class="stats">
-        <div class="stat"><strong>2,187,688</strong> <span>views</span></div>
+        <div class="stat"><strong>2,191,024</strong> <span>views</span></div>
         <div class="stat"><strong>531</strong> <span>followers</span></div>
-        <div class="stat"><strong>2,924</strong> <span>updates</span></div>
+        <div class="stat"><strong>2,931</strong> <span>updates</span></div>
         <div class="stat tips"><strong>0</strong> <span>tips</span></div>
       </div>
       <div class="actions">
@@ -237,6 +237,36 @@
 
         <div class="content">
           <div class="files">
+              <div class="file">
+                <div class="html-thumbnail html">
+                  <a href="https://nomnomnami.com/sitemap.html">
+                      <img src="/site_screenshots/35/19/nomnomnami/sitemap.html.540x405.webp" alt="Website screenshot">
+                      <span class="title" title="sitemap.html">
+                          sitemap.html
+                      </span>
+                  </a>
+                </div>
+              </div>
+              <div class="file">
+                <div class="html-thumbnail html">
+                  <a href="https://nomnomnami.com/posts/archive/2024/index.html">
+                      <img src="/site_screenshots/35/19/nomnomnami/posts/archive/2024/index.html.540x405.webp" alt="Website screenshot">
+                      <span class="title" title="posts/archive/2024/index.html">
+                          posts/archive/2024/index.html
+                      </span>
+                  </a>
+                </div>
+              </div>
+              <div class="file">
+                <div class="html-thumbnail html">
+                  <a href="https://nomnomnami.com/posts/archive/index.html">
+                      <img src="/site_screenshots/35/19/nomnomnami/posts/archive/index.html.540x405.webp" alt="Website screenshot">
+                      <span class="title" title="posts/archive/index.html">
+                          posts/archive/index.html
+                      </span>
+                  </a>
+                </div>
+              </div>
               <div class="file">
                 <div class="html-thumbnail html">
                   <a href="https://nomnomnami.com/games/syrup-2/index.html">
@@ -690,7 +720,7 @@
     <div class="stats">
       <div class="stat">
           <span>Last updated</span>
-          <strong class="local-date-title" data-timestamp="1760376591">24 minutes ago</strong>
+          <strong class="local-date-title" data-timestamp="1760378413">29 minutes ago</strong>
       </div>
       <div class="stat"><span>Created</span><strong>Mar 13, 2024</strong></div>
       <a href="/site/nomnomnami/stats">Site Traffic Stats</a>
